horarios, pagos y estilos

--- a/public/src/sass/abstract/_variables.scss
+++ b/public/src/sass/abstract/_variables.scss
@@ -4,12 +4,11 @@
 
 $blanco: #fff;
 $negro:#000000;
-$paleta2:#474f59;
-$paleta3: #a6986d;
-$paleta5:#d9c5c1;
+$paleta1: #321c3d;
+$paleta2:#84778C;
+$paleta3: #D96704;
+$paleta4:#8C471F;
 $gradiente: linear-gradient(rgba(0, 0, 0, 0.40), rgba(0, 0, 0, 0.40));
-$primary:#d9c5c1;
-$dark:#474f59;
 
 /*TIPOGRAFÍA*/
 
