--- a/public/src/sass/layout/_main.scss
+++ b/public/src/sass/layout/_main.scss
@@ -10,7 +10,7 @@ main {
     }
 
     .main-contenido {
-        margin: 70px;
+        margin: 70px 40px 70px 40px;
 
         h1 {
             color:#D96704;
