--- a/public/src/sass/layout/_botones.scss
+++ b/public/src/sass/layout/_botones.scss
@@ -66,6 +66,18 @@
 }
 
 
+.editar2 {
+    background-color: green;
+    border: solid 2px green;
+
+    &:hover {
+        border: solid 2px rgba(0, 128, 0, 0.719);
+        background-color: rgba(0, 128, 0, 0.719);
+    }
+
+    @include estiloGeneralCrud;
+}
+
 /*BOTON VER USUARIO*/
 
 #botones {
@@ -99,6 +111,18 @@
     &:hover {
         border: solid 2px rgba(217, 103, 4, 0.719);
         background-color: rgba(217, 103, 4, 0.719);
+    }
+
+    @include estiloGeneralCrud;
+}
+
+.cambiarPassword {
+    color:$negro !important;
+    background-color: rgb(255, 255, 255);
+    border: solid 2px rgb(255, 255, 255);
+    &:hover {
+        border: solid 2px rgba(255, 255, 255, 0.719);
+        background-color: rgba(255, 255, 255, 0.719);
     }
 
     @include estiloGeneralCrud;
