--- a/public/src/sass/layout/_nav-blog.scss
+++ b/public/src/sass/layout/_nav-blog.scss
@@ -3,14 +3,14 @@
     padding: 10px;
     grid-template-columns: 1fr 1fr 1fr;
 
-    @include movil-max(movil-max) {
+    @include movil-max(tablet-min) {
         grid-template-columns: 1fr;
     }
 
-    @include ordenador-max(tablet-min, portatil-L) {
-        grid-template-columns: 1fr 1fr;
+    // @include ordenador-max(tablet-min, portatil-L) {
+    //     grid-template-columns: 1fr 1fr;
 
-    }
+    // }
 
     .caja {
         width: 350px;
@@ -45,7 +45,7 @@
                 a {
                     padding: 10px;
                     font-size: 30px;
-                    color: #000000;
+                    color: $negro;
 
                     &:hover {
                         color: #636262;
@@ -59,7 +59,7 @@
             .post-title {
                 font-size: 1.3rem;
                 font-weight: 600;
-                color: black;
+                color: $negro;
                 display: -webkit-box;
                 -webkit-line-clamp:2;
                 -webkit-box-orient: vertical;
@@ -67,10 +67,10 @@
             }
 
             .post-saber {
-                background-color: #D96704;
-                        border-radius: 10px;
-                        padding: 10px;
-                        color: #fff;
+                background-color: $paleta3;
+                border-radius: 10px;
+                padding: 10px;
+                 color: $blanco;
             }
             .post-date {
                 display: flex;
