--- a/public/src/sass/layout/_nav.scss
+++ b/public/src/sass/layout/_nav.scss
@@ -2,7 +2,7 @@ header {
     .logo {
         margin-top: 10px;
         z-index: 10000;
-        width: 100px;
+        width: 90px;
         display: inline-block;
         position: fixed;
         margin-left: 100px;
@@ -23,8 +23,8 @@ header {
         cursor: pointer;
         font-size: 1.5em;
         width: 100%;
-        background-color: #321c3d;
-        color: #fff;
+        background-color: $paleta1;
+        color: $blanco;
         z-index: 1000;
 
         @include menu-nav-tablet(nav-menu) {
@@ -38,7 +38,7 @@ header {
         display: flex;
         width: 100%;
         justify-content: center;
-        background-color: #321c3d;
+        background-color: $paleta1;
         position: fixed;
         z-index: 1000;
         
@@ -49,9 +49,12 @@ header {
             height: 100%;
         }
 
+        .menu-item {
+            padding: 20px;
+        }
+
         .menu-link {
-            display: flex;
-            padding: 25px;
+            // display: flex;
             color: #fff;
             height: 100%;
             align-items: center;
@@ -61,13 +64,19 @@ header {
             }
         }
 
-        .login {
+        .contacto {
             background-color: #fff;
             color: #1c1022;
-            width: 100px;
-            margin: 5px;
-            text-align: center;
+            width: 70px;
+            padding: 10px;
+            border-radius: 5px;
+        }
 
+        .login {
+            border: 3px solid #fff;
+            width: 70px;
+            padding: 7px;
+            border-radius: 5px;
         }
 
         .container-submenu {
@@ -75,12 +84,11 @@ header {
             position: relative;
                 .icono-sub{
                     width: 40px;
-                    padding: 10px;
+                    // padding: 10px;
                     color: #fff;
                 }
             .imagen-user {
-                width: 50px;
-                border-radius: 50%;
+                width: 20px;
             }
             
            
@@ -100,7 +108,13 @@ header {
                     transition: all 0.3s;
 
                 }
+                .menu-item {
+                    padding: 0px !important;
 
+                 &:nth-child(1) {
+                    padding-top: 20px !important;
+                 }
+                }
                 .menu-link {
                     background-color: #1c1022;
                     display: flex;
@@ -126,3 +140,4 @@ header {
         margin-left: 0;
     }
 }
+
