--- a/public/src/sass/estilo.scss
+++ b/public/src/sass/estilo.scss
@@ -6,15 +6,13 @@
 @import "layout/header";
 @import "layout/footer";
 @import "layout/main";
-@import "componentes/carrousel";
-@import "componentes/scroll";
-
-@import "layout/formularios";
 @import "layout/crud";
 @import "layout/sobreNosotros";
-@import "layout/nav-blog";
+@import "layout/paginasSecundarias";
 @import "layout/verUsuario";
-@import "layout/botones";
+
+@import "componentes/formularios";
+@import "componentes/botones";
 
 
 
