--- a/public/src/sass/layout/_body.scss
+++ b/public/src/sass/layout/_body.scss
@@ -11,7 +11,7 @@ html,
 body {
     width: 100%;
     overflow-x: hidden;
-    @include ordenador-4k(ordenador-4k) {
+    @include min(ordenador-4k) {
         width: 80%;
         margin: auto;
 
