--- a/public/src/sass/layout/_nav.scss
+++ b/public/src/sass/layout/_nav.scss
@@ -7,7 +7,7 @@ header {
         position: fixed;
         margin-left: 100px;
 
-        @include menu-nav-tablet(nav-menu) {
+        @include max(nav-menu) {
             margin-top: -60px;
             position: absolute;
         }
@@ -27,7 +27,7 @@ header {
         color: $blanco;
         z-index: 1000;
 
-        @include menu-nav-tablet(nav-menu) {
+        @include max(nav-menu) {
             display: block;
             
         }
@@ -42,7 +42,7 @@ header {
         position: fixed;
         z-index: 1000;
         
-        @include menu-nav-tablet(nav-menu) {
+        @include max(nav-menu) {
             display: block;
             margin-left: -100%;
             width: 70%;
@@ -103,7 +103,7 @@ header {
                 opacity: 0;
                 visibility: hidden;
 
-                @include menu-nav-tablet(nav-menu) {
+                @include max(nav-menu) {
                     overflow: hidden;
                     transition: all 0.3s;
 
