--- a/public/src/sass/layout/_sobreNosotros.scss
+++ b/public/src/sass/layout/_sobreNosotros.scss
@@ -19,11 +19,11 @@
         justify-content: center;
         align-items: center;
         width: 100%;
-        @include movil-max(movil-max) {
-            flex-direction: column;
-        }
+        // @include max(movil-max) {
+        //     flex-direction: column;
+        // }
     
-        @include ordenador-max(tablet-min, nav-menu) {
+        @include between(movil-max, nav-menu) {
             flex-direction: column;
         }
 
